cambia estilos login

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="login_form container ">
+  <div class="container row mx-auto">
+    <div class="login_form container col-sm-11 offset-sm-1 col-lg-6 offset-lg-3 ">
       <div class="row justify-content-center inicia_sesion">
-        <h1>Nombre Hermoso</h1>
+        <h1>Nombre </h1>
       </div>
       <div class="row justify-content-center inicia_sesion">
         <h2>Inicia Sesión</h2>
       </div>
       <div class="buttons">
         <div class="row justify-content-center my-3">
-          <button type="button" class="btn btn-outline-info btn-lg col-sm-8 " id="btn-facebook">
-            <img src="./assets/facebook.png" class="facebook" alt="Facebook" width="52">
-            Facebook
+          <button type="button" class="btn btn-outline-light btn-lg col-5 col-md-8" id="btn-facebook">
+            <img src="./assets/facebook.png" class="facebook img-fluid" alt="Facebook" width="52">
+            <span class="NonDisplay">Facebook</span>
           </button>
         </div>
         <div class="row justify-content-center my-3">
-          <button type="button" class="btn btn-outline-danger btn-lg col-sm-8" id="btn-google">
-            <img src="./assets/google.png" class="google" alt="Google" width="48">
-            Google
+          <button type="button" class="btn btn-outline-danger btn-lg col-5 col-md-8" id="btn-google">
+            <img src="./assets/google.png" class="google" alt="Google" width="52">
+            <span class="NonDisplay" >Google</span>
           </button>
         </div>
       </div>
